# rlm-tutorial

./: .env.example  .gitignore  README.md  package-lock.json  package.json  requirements.txt  rlm_tutorial.ipynb  vercel.json
api/: rlm.py
docs/: index.md
docs/.vitepress/: config.ts
docs/00-intro/: setup.md  what-you-will-build.md
docs/10-concepts/: existing-approaches.md  long-context-problem.md  rlm-insight.md  three-design-choices.md
docs/20-paper/: algorithm.md  depth-and-results.md  repl-loop.md
docs/30-source/: architecture-overview.md  core-loop.md  repl-and-prompts.md
docs/40-demos/: demo1-persistent-repl.md  demo2-parse-and-run.md  demo3-llm-query.md  demo4-full-loop.md  demo5-recursion.md  overview.md
docs/50-build-backend/: implementation.md  logging-and-tests.md  structure.md
docs/60-build-frontend/: data-and-api.md  visualizer.md
docs/70-run-deploy/: deploy-vercel.md  online-demo.md  run-local.md
docs/80-extend/: extend-and-debug.md
final-project/backend/: README.md  pyproject.toml  scenarios.py  server.py
final-project/backend/demos/: demo1_persistent_repl.py  demo2_parse_and_run.py  demo3_llm_query.py  demo4_full_loop.py  demo5_recursion.py
final-project/backend/mini_rlm/: __init__.py  clients.py  logger.py  parsing.py  prompts.py  repl.py  rlm.py  types.py
final-project/backend/tests/: test_logger.py  test_parsing.py  test_repl.py  test_rlm.py
rlm_simple/: .env.example  ECHO.md  README.md  Recursive_Language_Models.md  __init__.py  agent.ipynb  llm.py  main.py  repl.py  rlm.py  run_test.py  sys_prompt.py
(+18 files in other folders)
