[project]
name = "mini-rlm"
version = "0.1.0"
description = "一个简化但保留核心思想的递归语言模型教学实现"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
# 用真实模型时才需要
openai = ["openai>=1.40.0"]
# 本地 API 服务（Part 6/7）
api = ["fastapi>=0.110.0", "uvicorn>=0.29.0"]
dev = ["pytest>=8.0.0", "ruff>=0.5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mini_rlm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
